CSS/style.css
*{
    padding: 0;
    margin: 0;
}
.sectionone{
    height: 100vh;
    width: 100%;
}
.sectionone .navigation{
    height: 20%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: blue;
}
.navigation .mainsection{
    height: 100%;
    width: 80%;
}
.navigation .navlinks{
    height: 30%;
    width: 100%;
    color: blue;
    font-weight: bold;
}
.banner{
    height: 80%;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: white;
    background-image: url(../Images/pexels-tara-winstead-7722657.jpg);
    background-position: bottom;
    background-size: cover;
}
.sectiontwo{
    height: 70vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: left;
    background-color: white;
}
.sectiontwo h1{
    color: blue;
    font-size: 32px;
    margin-bottom: 20px;
}
.sectiontwo .intro{
    color: black;
    font-weight: 500;
    margin-bottom: 10px;
}
.sectiontwo p{
    text-align: center;
    margin-bottom: 10px;
    font-family: monospace;
    font-size: 18px;
}
.sectiontwo button{
    border: solid 2px blue;
    padding: 10px 10px;
    cursor: pointer;
    border-radius: 15px;
    background-color: transparent;
}
/* End of section Two */

/* Start of section Three */
.sectionthree{
    height: 120vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #FAF7F7;
    position: relative;
}
.sectionthree .form{
    height: 200px;
    width: 550px;
    padding: 20px;
    background: linear-gradient(90deg, rgb(10, 10, 206), rgb(243, 5, 243)
    );
    border-radius: 10px;
    margin-bottom: 20px;
    box-shadow: 0 0 10px gray;
}
.form label{
    color: white;
    font-weight: 700;
    margin-right: 10px;
}
.toprated{
    height: 35%;
    width: 80%;
    margin-top: 15px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}
.toprated .img1{
    height: 100%;
    width:24%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: white;
    border-radius: 15px;
}
.toprated .img2{
    height: 100%;
    width: 24%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: white;
    border-radius: 15px;
}
.toprated .img3{
    height: 100%;
    width: 24%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: white;
    border-radius: 15px;
}
.toprated .img4{
    height: 100%;
    width: 24%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: white;
    border-radius: 15px;
}
.toprated img{
    height: 200px;
    width: 250px;
    margin-bottom: 10px;
}
.sectionthree h1{
    color: blue;
    font-size: 32px;
    margin-bottom: 20px;
    position: absolute;
    top: 5%;
}
.sectionthree h2{
    color: red;
    position: absolute;
    top: 10%;
}
.sectionthree .Location{
    color: black;
    position: absolute;
    top: 14%;
}
.sectionthree input{
    margin-bottom: 15px;
    height: 20px;
    width: 350px;
}
.sectionthree .last{
    border: solid 2px blue;
    padding: 10px 10px;
    cursor: pointer;
    border-radius: 25px;
    color: blue;
    background-color: transparent;
    position: absolute;
    bottom: 7%;
}
.sectionthree button{
    border: solid 2px white;
    padding: 7px 30px;
    cursor: pointer;
    border-radius: 15px;
    color: white;
    background-color: transparent;
}
.sectionthree span{
    color: blue;
    font-size: 14px;
    font-weight: 600;
}
.sectionthree a{
    text-decoration: none;
    padding: 10px 15px;
    background-color: blue;
    color: white;
    cursor: pointer;
    margin-top: 10px;
    font-weight: 600;
}
/* End Of section three */

/* Start Of section Four */
.sectionfour{
    height: 80vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: ghostwhite;
    position: relative;
}
.therapist{
    height: 47%;
    width: 80%;
    margin-top: 15px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}
.therapist .one{
    height: 100%;
    width:24%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: white;
    border-radius: 15px;
}
.therapist .two{
    height: 100%;
    width:24%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: white;
    border-radius: 15px;
}
.therapist .three{
    height: 100%;
    width:24%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: white;
    border-radius: 15px;
}
.therapist .four{
    height: 100%;
    width:24%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: white;
    border-radius: 15px;
}
.sectionfour h1{
    color: blue;
    font-size: 32px;
    margin-bottom: 20px;
    position: absolute;
    top: 8%;
}
.sectionfour h2{
    color: red;
    position: absolute;
    top: 17%;
}
.sectionfour .th{
    color: black;
    position: absolute;
    top: 23%;
}

.sectionfour img{
    height: 200px;
    width: 250px;
    margin-bottom: 10px;
}
.sectionfour button{
    border: solid 2px blue;
    padding: 10px 10px;
    cursor: pointer;
    border-radius: 25px;
    color: blue;
    background-color: transparent;
    position: absolute;
    bottom: 13%;
}
.sectionfour .articles{
    position: absolute;
    bottom: 7%;
    font-size: 18px;
}
/* ... */

